2005-03-31  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-14  Mark McLoughlin  <mark@skynet.ie>

	* acinclude.m4: remove - we don't use anything from
	it anymore. Fixes bug #153049

2005-03-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.10.1.

==================== 2.10.0 ====================

2005-03-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.10.0.

2005-02-16  Adi Attar  <aattar@cvs.gnome.org>

	* configure.in: Added "xh" to ALL_LINGUAS.

2005-02-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.9.92.

==================== 2.9.92 ====================

2005-02-07  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.9.91.

2005-02-06  Mark McLoughlin  <mark@skynet.ie>

	Fix bug #154005 - "preload breaks saved state", caused
	by a bug in the way the listeners tree was constructed.

	* gconf/gconf-listeners.c:
	(ltable_entry_new): take a list of path elements
	and index to the entry and construct the full 
	path for that entry.
	(ltable_insert): update for above so that we
	don't pass use the wrong path for full_name.

2005-01-18  Mark McLoughlin  <mark@skynet.ie>

	Fixes problem where a path file which only includes
	another path file wouldn't work.

	* gconf/gconf-internals.c: (gconf_load_source_path):
	assign the return value of g_slist_concat() to something.

2005-01-17  Mark McLoughlin  <mark@skynet.ie>

	Fix double free with gconf_client_clear_cache()

	* gconf/gconf-client.c: (clear_cache_foreach): don't
	free the key explicitly - the key is owned by the
	GConfEntry.

2005-01-12  Vincent Untz  <vincent@vuntz.net>

	* gconf-value.c: (gconf_value_validate): add sanity check

2004-11-30  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.9.3.

==================== 2.9.2 ====================

2004-11-30  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.9.2.
